traefik/traefik-ingress-controller.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.4.6
        name: traefik-ingress-lb
        volumeMounts:
          - mountPath: "/config"
            name: "config"
          - mountPath: "/etc/traefik/acme.json"
            name: "acme"
        args:
          - --configfile=/config/traefik.toml
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: acme
          hostPath:
            type: FileOrCreate
            path: /igloo/traefik/acme.json
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
  externalIPs:
    - 192.168.0.100
