traefik/traefik-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: igloo
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: igloo
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "traefik-dashboard-auth"
spec:
  rules:
  - http:
    paths:
    - path: /
      backend:
        serviceName: traefik-dashboard
        servicePort: 8080
  # - host: traefik.igloo.odicro.com
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: traefik-dashboard
  #         servicePort: 8080
